examples/test/testpolicy17488.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17488
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key48: value22
      key18: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value28
          key34: value26
          key16: value40
      podSelector:
        matchLabels:
          key19: value43
          key26: value15
          key14: value10
